# OS_labs

OS_lab1/: OS_lab1.sln
OS_lab1/Creator/: Creator.cpp
OS_lab1/Creator/x64/Debug/: Creator.exe.recipe
OS_lab1/Creator/x64/Debug/Creator.tlog/: CL.command.1.tlog  Cl.items.tlog  Creator.lastbuildstate
OS_lab1/OS_lab1/: Main.cpp  OS_lab1.vcxproj
OS_lab1/OS_lab1/Creator/: Creator.vcxproj
OS_lab1/OS_lab1/Creator/x64/Debug/: Creator.ilk  vc143.idb
OS_lab1/OS_lab1/OS_lab1/x64/Debug/: OS_lab1.ilk
OS_lab1/OS_lab1/x64/Debug/: OS_lab1.exe.recipe  vc143.idb
OS_lab1/OS_lab1/x64/Debug/OS_lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog
OS_lab1/Reporter/: Reporter.cpp  Reporter.vcxproj
OS_lab1/Reporter/x64/Debug/: Reporter.exe.recipe  Reporter.ilk  vc143.idb
OS_lab1/Reporter/x64/Debug/Reporter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
OS_lab1/x64/Debug/: res.txt
OS_lab2/: CMakeLists.txt  OS_lab2.sln  README.md
OS_lab2/Laba2/: CMakeLists.txt  Laba2.cpp  Laba2.h
OS_lab2/OS_lab2/: OS_lab2.cpp  OS_lab2.vcxproj  OS_lab2.vcxproj.filters
OS_lab2/OS_lab2/x64/Debug/: OS_lab2.exe.recipe  OS_lab2.ilk  vc143.idb
OS_lab2/lab2_C++98/src/: main.cpp
OS_lab3/lab3_11/: CMakeLists.txt
OS_lab3/lab3_11/src/: MarkerData.h  main.cpp  marker.cpp  marker.h
OS_lab3/lab3_11/tests/: test_marker.cpp
OS_lab3/lab3_98/: CMakeLists.txt
OS_lab3/lab3_98/src/: MarkerData.h  main.cpp  marker.cpp  marker.h
OS_lab4/: .gitignore  README.md
OS_lab5/: OS_lab5.sln
(+18 files in other folders)
